Fix: "Copy link" z-index

--- a/apps/web/src/components/transactions/TxShareLink/styles.module.css
+++ b/apps/web/src/components/transactions/TxShareLink/styles.module.css
@@ -1,7 +1,7 @@
 .shareBlock {
   margin-bottom: -53px;
   position: relative;
-  z-index: 10;
+  z-index: 3;
 }
 
 .shareBlockStatic {
